--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                   letter-spacing: -1px;
                 "
               >
-                <b style="font-size: 1.4em">2025. 02. 08. SAT 06:00 PM</b>
+                <b style="font-size: 1.4em">2025. 01. 05. SUN 10:00 AM</b>
                 <br />
-                <br />Thu Duc City - HCM City
+                <br />Thốt Nốt District - Cần Thơ City - Việt Nam
               </p>
             </div>
           </div>
@@ -190,19 +190,19 @@
             <div class="row">
               <div class="col-md-7 col-sm-12">
                 <div class="my-3">
-                  <div class="h4">THU DUC City</div>
+                  <div class="h4">Cần Thơ City</div>
                   <ul>
                     <li>
                       <i class="text-muted fas fa-map-marker-alt"></i>
                       <span class="pl-2 text-muted"
-                        >97 Thanh Xuan 33</span
+                        >Thốt Nốt Ward, Thốt Nốt District, Cần Thơ, Việt Nam</span
                       >
                     </li>
 
                     <li class="pt-2">
                       <i class="text-muted far fa-calendar-alt"></i>
                       <span class="pl-2 text-muted"
-                        >2025. 02. 08. SAT 06:00 PM</span
+                        >2025. 01. 05. SUN 10:00 AM</span
                       >
                     </li>
                     <li class="pt-2">
@@ -221,6 +221,11 @@
                         id="google-map"
                         src="images/map_icon.jpg"
                       />
+                      <img
+                      alt="Wedding Party"
+                      class="img-fluid"
+                      src="images/cairang.jpg"
+                      />
                     </a>
                   </ul>
                 </div>
@@ -230,7 +235,7 @@
                   <img
                     alt="Wedding Party"
                     class="img-fluid"
-                    src="https://static.wixstatic.com/media/2dd004_66823a8bf2bd4b54abf5e28036586199~mv2.jpg/v1/fill/w_980,h_551,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/2dd004_66823a8bf2bd4b54abf5e28036586199~mv2.jpg"
+                    src="images/can-tho-bridge-2.jpg"
                   />
                 </div>
               </div>
@@ -256,7 +261,7 @@
                       <img
                         alt="Gallery Pic 6"
                         class="img-fluid"
-                        src="images/pic4.jpg"
+                        src="images/pic6.jpg"
                       />
                     </a>
                   </div>
@@ -274,7 +279,7 @@
                       <img
                         alt="Gallery Pic 7"
                         class="img-fluid"
-                        src="images/pic6.jpg"
+                        src="images/pic7.jpg"
                       />
                     </a>
                   </div>
@@ -301,7 +306,7 @@
                       <img
                         alt="Gallery Pic 4"
                         class="img-fluid"
-                        src="images/pic7.JPG"
+                        src="images/pic4.JPG"
                     </a>
                   </div>
                   
