--- a/index.html
+++ b/index.html
@@ -255,13 +255,12 @@
                 <div class="card-columns">
                   <div
                     class="card"
-                    data-groups='["wedding","ceremony","party"]'
-                  >
+                    data-groups='["wedding","ceremony","party"]'>
                     <a data-gallery="ww-gallery" data-toggle="lightbox">
                       <img
                         alt="Gallery Pic 6"
                         class="img-fluid"
-                        src="images/pic10.jpg"
+                        src="images/pic6.JPG"
                       />
                     </a>
                   </div>
@@ -270,7 +269,7 @@
                       <img
                         alt="Gallery Pic 5"
                         class="img-fluid"
-                        src="images/pic5.jpg"
+                        src="images/pic5.JPG"
                       />
                     </a>
                   </div>
@@ -279,7 +278,7 @@
                       <img
                         alt="Gallery Pic 7"
                         class="img-fluid"
-                        src="images/pic7.jpg"
+                        src="images/pic7.JPG"
                       />
                     </a>
                   </div>
