--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                       <img
                         alt="Gallery Pic 6"
                         class="img-fluid"
-                        src="images/pic6.JPG"
+                        src="images/pic6_.JPG"
                       />
                     </a>
                   </div>
@@ -305,7 +305,7 @@
                       <img
                         alt="Gallery Pic 4"
                         class="img-fluid"
-                        src="images/pic4.JPG"
+                        src="images/pic4_.JPG"
                     </a>
                   </div>
                   
@@ -323,7 +323,7 @@
                       <img
                         alt="Gallery Pic 1.1"
                         class="img-fluid"
-                        src="images/pic_stu1.JPG"
+                        src="images/pic_stu2.JPG"
                       />
                     </a>
                   </div>
@@ -332,7 +332,7 @@
                       <img
                         alt="Gallery Pic 1.2"
                         class="img-fluid"
-                        src="images/Pic1.JPG"
+                        src="images/Pic1_.JPG"
                       />
                     </a>
                   </div>
