--- a/index.html
+++ b/index.html
@@ -94,9 +94,17 @@
                   letter-spacing: -1px;
                 "
               >
-                <b style="font-size: 1.4em">2025. 01. 05. SUN 10:00 AM</b>
-                <br />
-                <br />Thốt Nốt District - Cần Thơ City - Việt Nam
+              <b style="font-size: 0.85em">2025. 01. 02. THU 04:00 PM</b> -- Church wedding ceremony District 12- HCM City
+            </br>
+          </br>
+              <b style="font-size: 1.3em">2025. 01. 05. SUN 10:00 AM</b> -- Thốt Nốt District - Cần Thơ City
+            </br>
+          </br>
+              <b style="font-size: 0.85em">2025. 01. 23. THU 11:00 AM</b> -- Bình Lục District - Hà Nam Province
+            </br>
+          </br>
+              <b style="font-size: 1.3em">2025. 02. 08. SAT 06:00 PM</b> -- Thủ Đức City - HCM City
+            </br>
               </p>
             </div>
           </div>
@@ -221,11 +229,6 @@
                         id="google-map"
                         src="images/map_icon.jpg"
                       />
-                      <img
-                      alt="Wedding Party"
-                      class="img-fluid"
-                      src="images/cairang.jpg"
-                      />
                     </a>
                   </ul>
                 </div>
@@ -236,6 +239,54 @@
                     alt="Wedding Party"
                     class="img-fluid"
                     src="images/can-tho-bridge-2.jpg"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-7 col-sm-12">
+                <div class="my-3">
+                  <div class="h4">Sesan Restaurant, Thủ Đức City</div>
+                  <ul>
+                    <li>
+                      <i class="text-muted fas fa-map-marker-alt"></i>
+                      <span class="pl-2 text-muted"
+                        >14 Einstein, Bình Thọ ward, Thủ Đức City, HCM City</span
+                      >
+                    </li>
+
+                    <li class="pt-2">
+                      <i class="text-muted far fa-calendar-alt"></i>
+                      <span class="pl-2 text-muted"
+                        >2025. 02. 08. SAT 06:00 PM</span
+                      >
+                    </li>
+                    <li class="pt-2">
+                      <i class="text-muted far fa-calendar-alt"></i>
+                      <span class="pl-2 text-muted"
+                        >Click the icon below to get the map:</span
+                      >
+                    </li>
+                    <br />
+                    <a
+                      href="https://www.google.com/maps/place/Nh%C3%A0+h%C3%A0ng+Sesan/@10.8438291,106.7642708,17z/data=!3m1!4b1!4m6!3m5!1s0x317527a6e47c21bf:0xaac4c2c7eebbb865!8m2!3d10.8438291!4d106.7668457!16s%2Fg%2F1hc4fc5k1?hl=vi-VN&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D"
+                    >
+                      <img
+                        alt="google-map"
+                        class="map-icon"
+                        id="google-map"
+                        src="images/map_icon.jpg"
+                      />
+                    </a>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-md-5 col-sm-12">
+                <div class="my-3">
+                  <img
+                    alt="Wedding Party"
+                    class="img-fluid"
+                    src="images/SESAN.jpg"
                   />
                 </div>
               </div>
@@ -255,12 +306,13 @@
                 <div class="card-columns">
                   <div
                     class="card"
-                    data-groups='["wedding","ceremony","party"]'>
+                    data-groups='["wedding","ceremony","party"]'
+                  >
                     <a data-gallery="ww-gallery" data-toggle="lightbox">
                       <img
                         alt="Gallery Pic 6"
                         class="img-fluid"
-                        src="images/pic6_.JPG"
+                        src="images/pic6_.jpg"
                       />
                     </a>
                   </div>
@@ -269,7 +321,7 @@
                       <img
                         alt="Gallery Pic 5"
                         class="img-fluid"
-                        src="images/pic5.JPG"
+                        src="images/pic5.jpg"
                       />
                     </a>
                   </div>
@@ -278,7 +330,7 @@
                       <img
                         alt="Gallery Pic 7"
                         class="img-fluid"
-                        src="images/pic7.JPG"
+                        src="images/pic7.jpg"
                       />
                     </a>
                   </div>
