update gallery title

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 class="h1 text-center pb-3 ww-title"
                 style="font-family: 'Noto Serif KR', serif"
               >
-                Photo gallery
+                Our Photo gallery
               </h2>
               <div class="ww-gallery">
                 <div class="card-columns">
@@ -317,7 +317,7 @@
                       <img
                         alt="Gallery Pic 6"
                         class="img-fluid"
-                        src="images/pic6_.jpg"
+                        src="images/pic6_.JPG"
                       />
                     </a>
                   </div>
