--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                       <img
                         alt="Gallery Pic 5"
                         class="img-fluid"
-                        src="images/pic5.jpg"
+                        src="images/pic5_.jpg"
                       />
                     </a>
                   </div>
