change pic5_1 and 7

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                       <img
                         alt="Gallery Pic 5"
                         class="img-fluid"
-                        src="images/pic5_.jpg"
+                        src="images/pic5_1.JPG"
                       />
                     </a>
                   </div>
@@ -335,7 +335,7 @@
                       <img
                         alt="Gallery Pic 7"
                         class="img-fluid"
-                        src="images/pic7.jpg"
+                        src="images/pic7_.jpg"
                       />
                     </a>
                   </div>
