--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       sizes="180x180"
     />
     <link
-      href="images/favicon/favicon-32x32.png"
+      href="images/favicon/np.png"
       rel="icon"
       sizes="32x32"
       type="image/png"
     />
     <link
-      href="images/favicon/favicon-16x16.png"
+      href="images/favicon/np.png"
       rel="icon"
       sizes="16x16"
       type="image/png"
@@ -212,7 +212,7 @@
               class="h1 text-center pb-3 ww-title"
               style="font-family: 'Noto Serif KR', serif"
             >
-              We invite you!
+            We'd love to have you there!
             </h2>
             <div class="row">
               <div class="col-md-7 col-sm-12">
@@ -333,9 +333,9 @@
                   <div class="card" data-groups='["party","wedding"]'>
                     <a data-gallery="ww-gallery" data-toggle="lightbox">
                       <img
-                        alt="Gallery Pic 7"
+                        alt="Gallery Pic 11"
                         class="img-fluid"
-                        src="images/pic7_1.jpg"
+                        src="images/pic11.jpg"
                       />
                     </a>
                   </div>
