--- a/index.html
+++ b/index.html
@@ -330,15 +330,7 @@
                       />
                     </a>
                   </div>
-                  <div class="card" data-groups='["party","wedding"]'>
-                    <a data-gallery="ww-gallery" data-toggle="lightbox">
-                      <img
-                        alt="Gallery Pic 2"
-                        class="img-fluid"
-                        src="images/pic2.jpg"
-                      />
-                    </a>
-                  </div>
+
                   <div class="card" data-groups='["party","wedding"]'>
                     <a data-gallery="ww-gallery" data-toggle="lightbox">
                       <img
@@ -381,6 +373,15 @@
                         alt="Gallery Pic 1.1"
                         class="img-fluid"
                         src="images/pic_stu2.JPG"
+                      />
+                    </a>
+                  </div>
+                  <div class="card" data-groups='["party","wedding"]'>
+                    <a data-gallery="ww-gallery" data-toggle="lightbox">
+                      <img
+                        alt="Gallery Pic 3"
+                        class="img-fluid"
+                        src="images/pic3_1.JPG"
                       />
                     </a>
                   </div>
