--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                   letter-spacing: -1px;
                 "
               >
-              <b style="font-size: 1.5em">2025. 01. 05. SUN 10:00 AM</b> 
+              <b style="font-size: 1.5em">2025. 01. 23. THU 11:00 AM</b> 
             </br>
           </br>
-            Thốt Nốt District - Cần Thơ City
+            Bình Lục District - Hà Nam Province
             </br>
               </p>
             </div>
