update hanam infor

--- a/index.html
+++ b/index.html
@@ -262,6 +262,56 @@
                 </div>
               </div>
             </div>
+<!-- New Event Information: Ha Nam -->
+            <div class="row">
+              <div class="col-md-7 col-sm-12">
+                <div class="my-3">
+                  <div class="h4">Hà Nam Province</div>
+                  <ul>
+                    <li>
+                      <i class="text-muted fas fa-map-marker-alt"></i>
+                      <span class="pl-2 text-muted"
+                        >An Lão Ward, Bình Lục District, Hà Nam Province</span
+                      >
+                    </li>
+
+                    <li class="pt-2">
+                      <i class="text-muted far fa-calendar-alt"></i>
+                      <span class="pl-2 text-muted"
+                        >2025. 01. 23. THU 10:00 AM</span
+                      >
+                    </li>
+                    <li class="pt-2">
+                      <i class="text-muted far fa-calendar-alt"></i>
+                      <span class="pl-2 text-muted"
+                        >Click the icon below to get the map:</span
+                      >
+                    </li>
+                    <br />
+                    <a
+                      href="https://www.https://www.google.com/maps/place/Phong+lan+Thu+Ph%C3%B3ng/@20.4146733,105.9974597,17z/data=!3m1!4b1!4m6!3m5!1s0x3135d93f59049367:0xd91639c008ce6a23!8m2!3d20.4146683!4d106.0000346!16s%2Fg%2F11shd6_0y0?entry=ttu&g_ep=EgoyMDI1MDEwMi4wIKXMDSoASAFQAw%3D%3D"target="_blank"
+                    >
+                      <img
+                        alt="google-map"
+                        class="map-icon"
+                        id="google-map"
+                        src="images/map_icon.jpg"
+                      />
+                    </a>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-md-5 col-sm-12">
+                <div class="my-3">
+                  <img
+                    alt="Wedding Party"
+                    class="img-fluid"
+                    src="images/TamChuc.jpg"
+                  />
+                </div>
+              </div>
+            </div>
+
             <!-- New Event Information: Sesan Restaurant, Thủ Đức City -->
           <div class="row">
             <div class="col-md-7 col-sm-12">
