--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     </li>
                     <br />
                     <a
-                      href="https://www.https://www.google.com/maps/place/Phong+lan+Thu+Ph%C3%B3ng/@20.4146733,105.9974597,17z/data=!3m1!4b1!4m6!3m5!1s0x3135d93f59049367:0xd91639c008ce6a23!8m2!3d20.4146683!4d106.0000346!16s%2Fg%2F11shd6_0y0?entry=ttu&g_ep=EgoyMDI1MDEwMi4wIKXMDSoASAFQAw%3D%3D"target="_blank"
+                      href="https://www.google.com/maps/place/Phong+lan+Thu+Ph%C3%B3ng/@20.4146733,105.9974597,17z/data=!3m1!4b1!4m6!3m5!1s0x3135d93f59049367:0xd91639c008ce6a23!8m2!3d20.4146683!4d106.0000346!16s%2Fg%2F11shd6_0y0?entry=ttu&g_ep=EgoyMDI1MDEwMi4wIKXMDSoASAFQAw%3D%3D"target="_blank"
                     >
                       <img
                         alt="google-map"
