--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </p>
               <p class="ww-couple-name ww-title" style="font-size: 3em">&</p>
               <p class="ww-couple-name ww-title" style="font-size: 4em">Quỳnh Như</p>
-              <br /><br /><br /><br /><br /><br />
+              <br /><br /><br />
               <p
                 class="h2 mt-5 ww-title"
                 style="font-family: 'Gugi', cursive; font-size: 1em"
@@ -94,10 +94,10 @@
                   letter-spacing: -1px;
                 "
               >
-              <b style="font-size: 1.5em">2025. 01. 23. THU 11:00 AM</b> 
+              <b style="font-size: 1.5em">2025. 02. 08. SAT 06:30 PM</b> 
             </br>
           </br>
-            Bình Lục District - Hà Nam Province
+            Thủ Đức City - HCM City
             </br>
               </p>
             </div>
