--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <b style="font-size: 1.5em">2025. 02. 08. SAT 06:30 PM</b> 
             </br>
           </br>
-            Thủ Đức City - HCM City
+            Sesan Restaurant - Thủ Đức City - HCM City
             </br>
               </p>
             </div>
